# Advanced-RAG-System

./: .env.example  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt  routes_pages.py  test_stocks_doc.txt
LICENSES/: THIRD_PARTY_LICENSES.md
services/: document_processor.py
src/Advanced-RAG/: LICENSE  __init__.py  config.py  docker-compose.yml  main.py
src/Advanced-RAG/services/: domain_validator.py  rag_service.py  reranker.py  vector_store.py
src/Advanced-RAG/ui/: upload_ui.py
static/: index.html  privacy.html  termsofuse.html
ui/: chat_ui.py
